--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "pdf_bot"}]
 python = "^3.10"
 python-telegram-bot = "^20.2"
 pydantic = "^1.10.7"
+requests = "^2.31.0"
 
 
 [build-system]
