--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ python = "^3.10"
 python-telegram-bot = "^20.2"
 pydantic = "^1.10.7"
 requests = "^2.31.0"
+"pdfminer.six" = {extras = ["image"], version = "^20221105"}
+pdftotext = "^2.2.2"
+isort = "^5.12.0"
+flake8 = "^6.1.0"
+black = "^23.7.0"
 
 
 [build-system]
